// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new:component with example and with state generates component with expected files 1`] = `
"C
├── README.md
├── index.tsx
├── stories.tsx
└── test.tsx
"
`;

exports[`new:component with example and with state generates directory with expected \`README.md\` contents 1`] = `
"# \`<C />\`

DESCRIPTION_HERE

## Directory Structure

- \`stories.tsx\`: Component playground (\`npm run test:playground\`)
- \`test.tsx\`: Component tests (\`npm run test:unit\`)
- \`index.tsx\`: Component code
- \`README.md\`: Component documentation (hey, that's me!)

## Example

![C](../../../.loki/reference/chrome_C_example.png)

> Image location: [\`.loki/reference/chrome_C_example.png\`](../../../.loki/reference/chrome_C_example.png)
> 
> To regenerate: 
> 1. \`npm run test:playground\` (skip if running)
> 1. \`npm run test:visual:update -- --storiesFilter=\\"^C example\\\\$\\"\`
"
`;

exports[`new:component with example and with state generates directory with expected \`index.tsx\` contents 1`] = `
"import React, { useState } from \\"react\\"
import { Button, StyleSheet, Text, View } from \\"react-native\\"

type Props = Readonly<{}>

export function C(_: Props) {
  const [count, setCount] = useState(0)
  return (
    <View style={styles.container}>
      <Text>You clicked {count} times</Text>
      <Button onPress={() => setCount(count + 1)} title=\\"C\\" />
    </View>
  )
}

const styles = StyleSheet.create({
  container: {},
})
"
`;

exports[`new:component with example and with state generates directory with expected \`stories.tsx\` contents 1`] = `
"import { storiesOf } from \\"@storybook/react-native\\"
import React from \\"react\\"
import { C } from \\".\\"

storiesOf(\\"C\\", module).add(\\"example\\", () => <C />)
"
`;

exports[`new:component with example and with state generates directory with expected \`test.tsx\` contents 1`] = `
"import { C } from \\".\\"
import { render, fireEvent } from \\"@testing-library/react-native\\"
import React from \\"react\\"

describe(\\"C\\", () => {
  it(\\"has correct message before clicking\\", () => {
    // Arrange
    const message = \\"You clicked 0 times\\"

    // Act
    const { getByText } = render(<C />)
    const received = getByText(message)

    // Assert
    expect(received).toBeDefined()
  })

  it(\\"has correct message after clicking\\", () => {
    // Arrange
    const name = \\"Click Me\\"
    const message = \\"You clicked 1 times\\"

    // Act
    const { getByText } = render(<C />)
    const button = getByText(name)
    fireEvent.press(button)
    const received = getByText(message)

    // Assert
    expect(received).toBeDefined()
  })
})
"
`;

exports[`new:component with example but without state generates component with expected files 1`] = `
"B
├── README.md
├── index.tsx
├── stories.tsx
└── test.tsx
"
`;

exports[`new:component with example but without state generates directory with expected \`README.md\` contents 1`] = `
"# \`<B />\`

DESCRIPTION_HERE

## Directory Structure

- \`stories.tsx\`: Component playground (\`npm run test:playground\`)
- \`test.tsx\`: Component tests (\`npm run test:unit\`)
- \`index.tsx\`: Component code
- \`README.md\`: Component documentation (hey, that's me!)

## Example

![B](../../../.loki/reference/chrome_B_example.png)

> Image location: [\`.loki/reference/chrome_B_example.png\`](../../../.loki/reference/chrome_B_example.png)
> 
> To regenerate: 
> 1. \`npm run test:playground\` (skip if running)
> 1. \`npm run test:visual:update -- --storiesFilter=\\"^B example\\\\$\\"\`
"
`;

exports[`new:component with example but without state generates directory with expected \`index.tsx\` contents 1`] = `
"import React from \\"react\\"
import { StyleSheet, Text, View } from \\"react-native\\"

type Props = Readonly<{}>

export function B(_: Props) {
  return (
    <View style={styles.container}>
      <Text>B</Text>
    </View>
  )
}

const styles = StyleSheet.create({
  container: {},
})
"
`;

exports[`new:component with example but without state generates directory with expected \`stories.tsx\` contents 1`] = `
"import { storiesOf } from \\"@storybook/react-native\\"
import React from \\"react\\"
import { B } from \\".\\"

storiesOf(\\"B\\", module).add(\\"example\\", () => <B />)
"
`;

exports[`new:component with example but without state generates directory with expected \`test.tsx\` contents 1`] = `
"import { B } from \\".\\"
import { render } from \\"@testing-library/react-native\\"
import React from \\"react\\"

describe(\\"B\\", () => {
  it(\\"name prop is rendered\\", () => {
    // Arrange
    const name = \\"B\\"

    // Act
    const { getByText } = render(<B />)
    const received = getByText(name)

    // Assert
    expect(received).toBeDefined()
  })
})
"
`;

exports[`new:component without example code generates directory with expected \`README.md\` contents 1`] = `
"# \`<A />\`

DESCRIPTION_HERE

## Directory Structure

- \`stories.tsx\`: Component playground (\`npm run test:playground\`)
- \`test.tsx\`: Component tests (\`npm run test:unit\`)
- \`index.tsx\`: Component code
- \`README.md\`: Component documentation (hey, that's me!)

## Example

![A](../../../.loki/reference/chrome_A_example.png)

> Image location: [\`.loki/reference/chrome_A_example.png\`](../../../.loki/reference/chrome_A_example.png)
> 
> To regenerate: 
> 1. \`npm run test:playground\` (skip if running)
> 1. \`npm run test:visual:update -- --storiesFilter=\\"^A example\\\\$\\"\`
"
`;

exports[`new:component without example code generates directory with expected \`index.tsx\` contents 1`] = `
"import React from \\"react\\"

export function A() {
  return <></>
}
"
`;

exports[`new:component without example code generates directory with expected \`stories.tsx\` contents 1`] = `
"import { storiesOf } from \\"@storybook/react-native\\"
import React from \\"react\\"
import { A } from \\".\\"

storiesOf(\\"A\\", module).add(\\"example\\", () => <A />)
"
`;

exports[`new:component without example code generates directory with expected \`test.tsx\` contents 1`] = `
"import { A } from \\".\\"
import React from \\"react\\"

describe(\\"A\\", () => {
  it.todo(\`A needs to be tested\`)
})
"
`;

exports[`new:component without example code generates directory with expected files 1`] = `
"A
├── README.md
├── index.tsx
├── stories.tsx
└── test.tsx
"
`;
